--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <script type="text/javascript">
     var cfgApiBaseUrl = "http://localhost:8080/prueba02service";
+    var cfgApiBaseUrl = "http://pruebaibm-env.5zvjmzs9uh.us-west-1.elasticbeanstalk.com";
+
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
