--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <script type="text/javascript">
     var cfgApiBaseUrl = "http://localhost:8080/prueba02service";
     var cfgApiBaseUrl = "http://pruebaibm-env.5zvjmzs9uh.us-west-1.elasticbeanstalk.com";
+    var cfgApiBaseUrl = "http://localhost:8080/prueba01-0.0.1-SNAPSHOT";
+    
 
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
