--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <script type="text/javascript">
     var cfgApiBaseUrl = "http://localhost:8080/prueba02service";
-    var cfgApiBaseUrl = "http://pruebaibm-env.5zvjmzs9uh.us-west-1.elasticbeanstalk.com";
     var cfgApiBaseUrl = "http://localhost:8080/prueba01-0.0.1-SNAPSHOT";
+    var cfgApiBaseUrl = "http://pruebaibmenv5zvjmzs9uh.us-west-1.elasticbeanstalk.com";
+
     
 
   </script>
